--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cita con la Birra</title>
+    <meta name="description"
+        content="somos un bar que ofrece las mejores variedad de cervezas y hamburguesas artesanales, tambien contamos con cena show y noches de stand up">
+    <title>Cita con la Birra| Bar cervecero</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
@@ -63,88 +65,95 @@
                     perder nuestras noches de stand up. ¡¡ Pura diversion !!.
                     Veni a disfrutar en familia , tambien contamos con menús infantiles y sala de juegos para los mas
                     pequeños.
+                    Contamos con instalaciones seguras en todos los aspectos , para que vos y tus acompañantes se
+                    sientan totalmente como en casa.Veni a visitarnos y descubri nuestro bar.
                 </p>
             </div>
-<!----------------- tarjetas de promociones-------- -->
-<section>
-            <div class="row text-center animate__animated animate__bounceInLeft">
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
-                    <div class="card shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">Hamburguesas nacionales</h5>
-                            <p class="card-text">Veni a probar nuestras hamburguesas, fabricadas con la mejor carne
-                                vacuna de nuestra region, no te quedes sin probarlas.
-                            </p>
-                            <a href="" class="btn btn-info">Ver promocion</a>
+            <!----------------- tarjetas de promociones-------- -->
+            <section>
+                <div class="row text-center animate__animated animate__bounceInLeft">
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Hamburguesas nacionales</h5>
+                                <p class="card-text">Veni a probar nuestras hamburguesas, fabricadas con la mejor carne
+                                    vacuna de nuestra region, no te quedes sin probarlas.
+                                </p>
+                                <a href="" class="btn btn-info">Ver promocion</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Pastas de la casa</h5>
+                                <p class="card-text"> probas las mas exquisitas pastas de nuestros cocineros al mejor
+                                    precio.
+                                    Sorrentinos ,Ravioles , fideos todo de la mejor calidad.
+                                </p>
+                                <a href="" class="btn btn-info">Ver promocion</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Nuestras cervezas</h5>
+                                <p class="card-text">Contamos con la mas exquisita variedad de cervezas artesanales,
+                                    aprovecha la promo en happy hours.Todas al 2x1.De lunes a viernes.</p>
+                                <a href="" class="btn btn-info">Ver promocion</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
-                    <div class="card shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">Pastas de la casa</h5>
-                            <p class="card-text"> probas las mas exquisitas pastas de nuestros cocineros al mejor
-                                precio.
-                                Sorrentinos ,Ravioles , fideos todo de la mejor calidad.
-                            </p>
-                            <a href="" class="btn btn-info">Ver promocion</a>
-                        </div>
+            </section>
+            <!------------ presentacion de la terraza----------- -->
+            <section>
+                <div class="row align-items-center animate__animated animate__bounceInRight">
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                        <img src="./images/citaconlabirra3-proyect.jpeg" class=" foto_1 img-fluid" alt="Image" />
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                        <h1 class="display-3 text-center">Nuestra Terraza</h1>
+                        <p class="text-justify">
+                            Tambien contamos con una exclusiva terraza con las mejores vistas, para que puedas disfrutar
+                            las
+                            maravillas de nuestra ciudad con buena musica y la mejor atencion.
+                            Reserva tu lugar no te quedes afuera.
+                            ﻿Los mejores tragos del mundo los vas a encontar en nuestra barra.
+                            Tragos nacionales e internacionales al mejor precio ¿ te lo vas a perder ?
+                            Ingresa en nuestra pagina de reservas para no quedarte sin tu mesa, podes escribirnos y te
+                            aseguras tu lugar.
+                        </p>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
-                    <div class="card shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">Nuestras cervezas</h5>
-                            <p class="card-text">Contamos con la mas exquisita variedad de cervezas artesanales,
-                                aprovecha la promo en happy hours.Todas al 2x1.De lunes a viernes.</p>
-                            <a href="" class="btn btn-info">Ver promocion</a>
-                        </div>
+                <!------- formulario de consulta--------------------- -->
+                <div class="row align-items-center animate__animated animate__backInUp">
+                    <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 mt-3">
+                        <form>
+                            <h3>Dejanos tu consulta</h3>
+                            <div class="mb-2">
+                                <label for="txtEmail" class="form-label">Tu email</label>
+                                <input type="email" class="form-control" id="txtEmail" aria-describedby="emailHelp" />
+                                <div id="emailHelp" class="form-text"></div>
+                            </div>
+                            <div class="mb-2">
+                                <label for="txtComment" class="form-label">Tu consulta</label>
+                                <textarea class="form-control" id="txtComment" rows="7"></textarea>
+                            </div>
+                            <input type="submit" placeholder="Enviar consulta">
+                        </form>
+                    </div>
+
+                    <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9 mt-3">
+                        <img src="./images/citaconlabirra1-proyect.jpg" class=" foto_2 img-fluid"
+                            alt="foto de la terraza" />
                     </div>
                 </div>
-            </div>
-        </section>
-<!------------ presentacion de la terraza----------- -->
-<section>
-            <div class="row align-items-center animate__animated animate__bounceInRight">
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <img src="./images/citaconlabirra3-proyect.jpeg" class=" foto_1 img-fluid" alt="Image" />
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <h1 class="display-3 text-center">Nuestra Terraza</h1>
-                    <p class="text-justify">
-                        Tambien contamos con una exclusiva terraza con las mejores vistas, para que puedas disfrutar las
-                        maravillas de nuestra ciudad con buena musica y la mejor atencion.
-                        Reserva tu lugar no te quedes afuera.
-                        ﻿Los mejores tragos del mundo los vas a encontar en nuestra barra.
-                        Tragos nacionales e internacionales al mejor precio ¿ te lo vas a perder ?
-                    </p>
-                </div>
-            </div>
-<!------- formulario de consulta--------------------- -->
-            <div class="row align-items-center animate__animated animate__backInUp">
-                <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 mt-3">
-                    <form>
-                        <h3>Dejanos tu consulta</h3>
-                        <div class="mb-2">
-                            <label for="txtEmail" class="form-label">Tu email</label>
-                            <input type="email" class="form-control" id="txtEmail" aria-describedby="emailHelp" />
-                            <div id="emailHelp" class="form-text"></div>
-                        </div>
-                        <div class="mb-2">
-                            <label for="txtComment" class="form-label">Tu consulta</label>
-                            <textarea class="form-control" id="txtComment" rows="7"></textarea>
-                        </div>
-                        <input type="submit" placeholder="Enviar consulta">
-                    </form>
-                </div>
-                <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9 mt-3">
-                    <img src="./images/citaconlabirra1-proyect.jpg" class=" foto_2 img-fluid" alt="foto de la terraza" />
-                </div>
-            </div>
-        </section>
+            </section>
     </main>
 
-<!-- ------------------------footer------------- -->
+    <!-- ------------------------footer------------- -->
     <div class="row">
         <footer class="py-3 my-4">
             <h4>Seguinos en nuestras redes sociales</h4>
@@ -157,7 +166,7 @@
             </ul>
         </footer>
     </div>
-    
+
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -165,15 +174,7 @@
         crossorigin="anonymous"></script>
 
 
-    
+
 </body>
 
 </html>
-
-
-
-
-
-
-
-
